--- a/Workshop_1/package.json
+++ b/Workshop_1/package.json
@@ -7,6 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -16,3 +17,5 @@
     "nodemon": "^3.1.11"
   }
 }
+
+
